Fixed comment styling bugs, fixed dark mode and mobile views

--- a/wp-content/themes/bpr2018/resources/assets/sass/_comments.scss
+++ b/wp-content/themes/bpr2018/resources/assets/sass/_comments.scss
@@ -53,6 +53,7 @@
     .comment-form-comment {
       textarea {
         resize: none;
+        border: 1px solid darkgray;
         border-radius: 20px;
         padding: 10px 20px;
         width: 100%;
@@ -97,7 +98,7 @@
       @media (prefers-color-scheme: dark) {
         input[type='submit'] {
           outline: none;
-          border: 1px solid $color-black;
+          border: 1px solid darkgray;
           background: $color-carbon-darkmode;
         }
       }
@@ -111,7 +112,7 @@
     list-style: none;
   }
 
-  li > .comment-body {
+  li > .comment-body  {
     border-radius: 20px;
     border: 1px solid rgb(169, 169, 169); // TODO: Make this color value a variable
     padding: 5px 15px 15px 15px;
@@ -122,6 +123,10 @@
       display: flex;
       flex-direction: row;
       justify-content: space-between;
+
+      @media screen and (max-width: $width-lg) {
+        flex-direction: column;
+      }
 
       .comment-author.vcard {
         .avatar {
@@ -134,6 +139,10 @@
           font-size: 2rem;
           margin-left: 10px;
           line-height: calc(1.5em);
+
+          @media (prefers-color-scheme: dark) {
+            color: $color-white;
+          }
         }
 
         .says {
